syntax = "proto3";

import "google/protobuf/empty.proto";

package repeater_proto;

service OwlRepeater {
  // ReceiveTimeSeriesData 中继器接收数据
  rpc ReceiveTimeSeriesData(TsData) returns(google.protobuf.Empty);
}

message TsData {
  string metric = 1;
  string data_type = 2;
  double value = 3;
  int64 timestamp = 4;
  int32 cycle = 5;
  map<string, string> tags = 6;
}